--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -1,26 +1,17 @@
 /* Home page styles */
-body {
-    font-size: 14px;
-    max-width: 115rem;
-    margin: 0 auto;
+body {font-size: 14px;}
+header {
+    margin-bottom: 60px;
 }
 img {
-    float: right;
-    padding: 2em;
-}
-header {
-    margin-bottom: 1em;
+    margin-bottom: 30px;
 }
 h1 {
-    font-size: 20px;
+    font-size: 14px;
     font-weight: bold;
-    margin-top: 2em;
 }
 h2 {
-    font-size: 18px;
-}
-h3 {
-    font-size: 16px;
+    font-size: 14px;
 }
 ul {
     list-style-type: none;
@@ -39,7 +30,6 @@ hr {
 
 .container {
     margin: 1em;
-    padding-bottom: 2em;
 }
 .text-center {
     text-align: center;
@@ -75,13 +65,4 @@ hr {
 }
 #url-rewriting-warning {
     display: none;
-}
-.col1 {
-    padding: 2em;
-    display: grid;
-    width: 700px;
-    place-content: center;
-}
-.col2 {
-    padding: 2em;
 }
